force-app/main/default/objects/OpportunityAmt__c/OpportunityAmt__c.object-meta.xml
<CustomObject>
    <label>Opportunity Amount</label>
    <nameField>
        <label>Opportunity Amount</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Amount</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>