force-app/main/default/objects/OpportunityAmt__c/fields/Bo_Version_Composite__c.field-meta.xml
<CustomField>
    <fullName>Bo_Version_Composite__c</fullName>
    <formula>Opportunitycode__c +&apos;_&apos;+Version__c</formula>
    <label>Bo Version Composite</label>
    <type>Text</type>
</CustomField>