force-app/main/default/objects/OpportunityAmt__c/fields/Closedate__c.field-meta.xml
<CustomField>
    <fullName>Closedate__c</fullName>
    <label>Closedate</label>
    <type>Date</type>
</CustomField>