force-app/main/default/objects/OpportunityAmt__c/fields/Companycode__c.field-meta.xml
<CustomField>
    <fullName>Companycode__c</fullName>
    <label>CompanyCode</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>