force-app/main/default/objects/OpportunityAmt__c/fields/Confirmdate__c.field-meta.xml
<CustomField>
    <fullName>Confirmdate__c</fullName>
    <label>Confirmdate</label>
    <type>Date</type>
</CustomField>