force-app/main/default/objects/OpportunityAmt__c/fields/Contractno__c.field-meta.xml
<CustomField>
    <fullName>Contractno__c</fullName>
    <label>Contractno</label>
    <length>20</length>
    <type>Text</type>
</CustomField>