force-app/main/default/objects/OpportunityAmt__c/fields/CurrencyLoc__c.field-meta.xml
<CustomField>
    <fullName>CurrencyLoc__c</fullName>
    <label>Currency_Loc</label>
    <length>10</length>
    <type>Text</type>
</CustomField>