force-app/main/default/objects/OpportunityAmt__c/fields/DiffAmt__c.field-meta.xml
<CustomField>
    <fullName>DiffAmt__c</fullName>
    <label>DiffAmt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>