force-app/main/default/objects/OpportunityAmt__c/fields/DiffAmtKRW__c.field-meta.xml
<CustomField>
    <fullName>DiffAmtKRW__c</fullName>
    <label>DiffAmtKRW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>