force-app/main/default/objects/OpportunityAmt__c/fields/DiffAmtLoc__c.field-meta.xml
<CustomField>
    <fullName>DiffAmtLoc__c</fullName>
    <label>DiffAmt_Loc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>