force-app/main/default/objects/OpportunityAmt__c/fields/DiffAmtUSD__c.field-meta.xml
<CustomField>
    <fullName>DiffAmtUSD__c</fullName>
    <label>DiffAmtUSD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>