force-app/main/default/objects/OpportunityAmt__c/fields/Opportunitycode__c.field-meta.xml
<CustomField>
    <fullName>Opportunitycode__c</fullName>
    <label>OpportunityCode</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>