force-app/main/default/objects/OpportunityAmt__c/fields/Rateyn__c.field-meta.xml
<CustomField>
    <fullName>Rateyn__c</fullName>
    <label>Rate_yn</label>
    <length>10</length>
    <type>Text</type>
</CustomField>