force-app/main/default/objects/OpportunityAmt__c/fields/TotalAmt__c.field-meta.xml
<CustomField>
    <fullName>TotalAmt__c</fullName>
    <label>TotalAmt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>