force-app/main/default/objects/OpportunityAmt__c/fields/TotalAmtKRW__c.field-meta.xml
<CustomField>
    <fullName>TotalAmtKRW__c</fullName>
    <label>TotalAmtKRW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>