force-app/main/default/objects/OpportunityAmt__c/fields/TotalAmtLoc__c.field-meta.xml
<CustomField>
    <fullName>TotalAmtLoc__c</fullName>
    <label>TotalAmt_Loc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>