force-app/main/default/objects/OpportunityAmt__c/fields/TotalAmtUSD__c.field-meta.xml
<CustomField>
    <fullName>TotalAmtUSD__c</fullName>
    <label>TotalAmtUSD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>