force-app/main/default/objects/OpportunityAmt__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>